--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ animated_fins:	  true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              
-baseurl:          
+url:              http://safetycircle.github.io
+baseurl:          /website
 # Owner/author information
 owner:
   name:           Michael Roberts
