--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "l
 # https://github.com/prose/prose/wiki/Prose-Configuration
 prose:
   rooturl: '_posts'
-  siteurl: 'http://ramiyahya.github.io/safetycircle/'
+  siteurl: 'http://safetycircle.github.io/website/'
   media: 'images'
   metadata:
     _posts:
