--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ animated_fins:	  true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://safetycircle.github.io
-baseurl:          /website
+url:              http://safetycircle.asia
+baseurl:          
 # Owner/author information
 owner:
   name:           Michael Roberts
@@ -93,7 +93,7 @@ exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "l
 # https://github.com/prose/prose/wiki/Prose-Configuration
 prose:
   rooturl: '_posts'
-  siteurl: 'http://safetycircle.github.io/website/'
+  siteurl: 'http://safetycircle.asia/'
   media: 'images'
   metadata:
     _posts:
