--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,14 @@ links:
     url: /
     external: false
     icon: home
+  - title: <i class="icon-book"></i> Documentation
+    url: /documentation
   - title: Categories
     url: /categories
   - title: Tags
     url: /tags
+  - title: Faysal who?
+    url: /hossain-mohd-faysal
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Australia/Tasmania
@@ -108,3 +112,43 @@ prose:
               value: "videos"
             - name: "General"
               value: "general"
+      - name: "category"
+	field:
+	  element: "select"
+	  label: "What kind of post is it?"
+	  options:
+	    - name: "Photo"
+	      value: "photo"
+	    - name: "Video"
+	      value: "video"
+      - name: "tags"
+        field:
+          element: "multiselect"
+          label: "Add Tags"
+          placeholder: "Choose Tags"
+          options:
+            - name: "Sample post"
+              value: "sample post"
+            - name: "Images"
+              value: "images"
+            - name: "Videos"
+              value: "videos"
+            - name: "General"
+              value: "general"
+      - name: "comments"
+        field:
+          element: "checkbox"
+          label: "Enable comments"
+          value: "true"
+      - name: "share"
+        field:
+      	  element: "button"
+      	  label: "Social Sharing"
+      	  help: "Allow users to share post on social media"
+      	  on: "ON"
+      	  off: "OFF"
+      - name: "published"
+        field:
+          element: "checkbox"
+          label: "Publish"
+          value: "true"
