--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,13 @@ prose:
         field:
           element: "hidden"
           value: "post"
+      - name: "title"
+	field:
+	  element: "text"
+	  label: "Title"
+	  help: "This is the title of your article"
+	  placeholder: "My new article"
+	  type: "text"
       - name: "category"
         field:
           element: "select"
