--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ prose:
           value: "post"
       - name: "title"
         field:
-          element: "text"
+          element: "textarea"
           label: "Title"
       - name: "category"
         field:
