--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ animated_fins:    true
 # Specify the fin color in RGB value
 fin_color:        "255,255,255"
 # Change url to your domain. Leave localhost server or blank when working locally.
-url:              http://safetycircle.asia
+url:              http://safetycircle.com.au
 baseurl:          
 # Owner/author information
 owner:
@@ -93,7 +93,7 @@ exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "l
 # https://github.com/prose/prose/wiki/Prose-Configuration
 prose:
   rooturl: '_posts'
-  siteurl: 'http://safetycircle.asia/'
+  siteurl: 'http://safetycircle.com.au/'
   media: 'images'
   metadata:
     _posts:
@@ -116,16 +116,6 @@ prose:
               value: "videos"
             - name: "General"
               value: "general"
-      - name: "type"
-        field:
-          element: "select"
-          label: "Select type"
-          help: "What kind of post is it?"
-          options:
-            - name: "Photo"
-              value: "photo"
-            - name: "Video"
-              value: "video"
       - name: "tags"
         field:
           element: "multiselect"
