Register page and other changes

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:            SafetyCircle
-description:      "Think inside the circle"
+description:      "Safety Circle - powerful cultural change for safe work in Australia and New Zealand"
 logo:             omikron.png
 disqus_shortname: safetycircle
 # Assign a default image for your site's header and footer
