--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ links:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    Australia/Tasmania
 future:      true
-pygments:    true
+highlighter:    true
 markdown:    kramdown
 paginate:    4
 paginate_path: "blog/page:num"
